--- a/example_theme/package.json
+++ b/example_theme/package.json
@@ -19,7 +19,9 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^4.1.0",
+    "gulp-uglify": "^3.0.2",
     "http-proxy": "^1.18.1",
+    "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "yargs-parser": "^13.1.2"
   },
